--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
 RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-s
+RewriteCond %{REQUEST_FILENAME} !-l
+Rewritecond %{REQUEST_FILENAME} !-d
 RewriteRule ^.*$ index.php [NC,L]
